# rwkv-metal

./: .gitignore  README.md  pretrain.py  pyproject.toml  rwkv-metal.md
docs/: inference.md  lora.md  pretraining.md
experiments/: bench_attrib.py  bench_ce.py  bench_compiled.py  bench_dim.py  bench_dplr.py  bench_fast.py  bench_insitu.py  bench_kernel.py  bench_loop_overlap.py  bench_occupancy.py  bench_profile.py  bench_s33c.py  bench_s34b.py  bench_step.py  bench_trace.py  capture_w.py  dplr_bwd_chunk_mlx.py  dplr_bwd_mlx.py  dplr_bwd_one_mlx.py  dplr_mlx.py  fused_ce.py  s3_dplr_kernel.py  verify_batched.py  verify_chunk_one.py  verify_chunk_one_metal.py  verify_dplr.py  verify_fast.py  verify_fwd.py  verify_fwd_v2.py  verify_grad.py  verify_grad_chunk.py  verify_grad_steps.py  verify_grad_steps_b.py  verify_grad_w.py  verify_parallel.py  verify_s3.py  verify_s34b.py  verify_s34b_metal.py  verify_s34b_metal_bh.py  verify_s34b_saved.py  (+3 more)
rwkv_metal/: __init__.py
rwkv_metal/kernel/: __init__.py  wkv7.py  wkv7_checkpoint.py
rwkv_metal/lora/: __init__.py  add_rwkvq.py  finetune.py  lora.py  (+4 more)
tests/: dev_bench_hybrid_full.py  dev_bench_native_qmm.py  dev_bench_rwkvq_lazyload_rss.py  dev_bench_rwkvq_mem.py  dev_bench_rwkvq_qlora.py  dev_bench_rwkvq_rss.py  dev_bench_stock_qlora.py  dev_check_hybrid.py  dev_check_requantize_roundtrip.py  dev_check_rwkvq_fused_kernel.py  dev_check_rwkvq_linear.py  dev_pack_native_mlx.py  dev_reverse_mlx_pack.py  test_wkv7_backward.py  test_wkv7_determinism.py  test_wkv7_infer_var.py
tools/: convert_fla_to_x070.py  gen_x070_fixtures.py
(+11 files in other folders)
